--- a/Identificator/jupyter_notebooks/names_clustering.ipynb
+++ b/Identificator/jupyter_notebooks/names_clustering.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
    "metadata": {
     "collapsed": true
